--- a/bibliography.tex
+++ b/bibliography.tex
@@ -1,4 +1,5 @@
 %&latex
 \begin{thebibliography}{00}
-\bibitem{b1} { \textcolor{gray}\blindtext }
+\bibitem{cppstd}
+	ISO/IEC. (2020). ``ISO International Standard ISO/IEC 14882:2020(E) – Programming Language C\texttt{++}.'' [Working draft]. Geneva, Switzerland: International Organization for Standardization (ISO). Retrieved from https://isocpp.org/std/the-standard
 \end{thebibliography}
