--- a/external_dependency_management.tex
+++ b/external_dependency_management.tex
@@ -134,7 +134,7 @@ window manager, \textsc{wmRS} (parts redacted for clarity).\\
   required-features = ["bar"]
   
   [[bin]]
-  name = "wzrdclient"
+  name = "wmRSclient"
   path = "src/client/main.rs"
   required-features = ["client"]
   
