--- a/abstract.tex
+++ b/abstract.tex
@@ -6,8 +6,8 @@ In comparing  and discussing programming  languages (and natural  languages, for
 that matter), not only \textit{syntax} and \textit{semantics} are of importance.
 \textit{Pragmatics} is  the third  general area  of language  description, which
 deals with the  practical aspects of how language constructs  and features allow
-its users  to achieve  various objectives. In  this paper, we  will look  at the
-pragmatics of  both Rust  and C\texttt{++}. Specifically,  we will  be comparing
+its users  to achieve various objectives[CITE].  In this paper, we  will look at
+the pragmatics of both Rust and C\texttt{++}. Specifically, we will be comparing
 the  languages in  their  ability  to be  used  as a  tool  to  write medium  to
 large  \textit{system programs}.  As a  case study,  we will  be discussing  two
 implementations of  a complete ICCCM  and EWMH compliant  top-level reparenting,
